Lab 2 with all exercises